[project]
name = "db-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.5.2",
    "pymysql[rsa]>=1.1.1",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "pylint>=3.3.1",
]
